--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,86 +27,82 @@
       <% end %>
       <% if user_signed_in? && current_user.is_admin %>
         <li class="dropdown" style="font-size: 20px" ><a class="dropdown-toggle" data-toggle="dropdown">eCommerce<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          		<li><%= link_to "Add Product", new_product_path %></li>
-          		<li><%= link_to "Add Category", new_category_path %></li>
-        	   <li><%= link_to "Add SubCategory", new_sub_category_path%></li>
+          <ul class="dropdown-menu">
+              <li><%= link_to "Add Product", new_product_path %></li>
+              <li><%= link_to "Add Category", new_category_path %></li>
+             <li><%= link_to "Add SubCategory", new_sub_category_path%></li>
           </ul>
         </li>
       <% end %>
     </ul>
-    </div>
-
-	<ul class="nav navbar-nav"> 
-		<form class="navbar-form navbar-right"> 
-  			<div class="input-group">
-    			<input type="text" class="form-control" size="100" id="search" placeholder="Live Search for Product and Brands">
-
-    			<div class="input-group-btn">
-    	  			<button class="btn btn-default" type="submit">
-  	      				<i class="glyphicon glyphicon-search"></i>
-      				</button>
-    			</div>
-  			</div>
-		</form>
-   </ul>
-    <ul class="nav navbar-nav">
-		<li style="font-size: 16px "><%= link_to "Contact", addresses_contact_path %></li>  
-		<li style="font-size: 16px"><a href="/cart_line_items"><span class="glyphicon glyphicon-shopping-cart"></span>Cart</a></li>
-        <li style="font-size: 16px"><%= link_to "Orders", orders_path %></li>
-
-    </ul>
-    <ul class="nav navbar-nav">
-      <li style="font-size: 16px"><%= link_to "Products", products_path %></li>
-      
-      <li class="dropdown" style="font-size: 16px"><a class="dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-              <% Category.all.each do |category| %>
-                  <li> <%= link_to category.name, category_path(category.id) %></li>
-              <% end %>         
-          </ul>
-      </li>
-      <li class="dropdown" style="font-size: 16px"><a class="dropdown-toggle" data-toggle="dropdown">Sub Categories<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-          
-              <% SubCategory.all.each do |category| %>
-                  <li style="font-size: 12px"> <%= link_to category.name, sub_category_path(category.id) %></li>
-              <%end%>
-          </ul>
-      </li>
-    
-
-    <% if user_signed_in? %>
-	    <li class="dropdown" style="font-size: 16px" ><a class="dropdown-toggle" data-toggle="dropdown"><b>My Account</b><span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          		<li><%= link_to "Profile", edit_user_registration_path %></li>
-     			<li><%= link_to "Add Address", addresses_path%></li>
-          		<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-        	</ul>
-      </li>
-    </ul>
-    <% else %>
-    	<ul class="nav navbar-nav navbar-right">
-    	  <li><a href="/users/sign_in">Sign In<span class="glyphicon glyphicon-user"></span></a></li>
-          <li><a href="/users/sign_up">Sign Up<span class="glyphicon glyphicon-log-in"></span></a></li>
-      	</ul>
-    <% end %>
-    
   </div>
 
-
+  <ul class="nav navbar-nav"> 
+      <li style="font-size: 16px;"><%= link_to "Shop Now", products_path %></li>
+  </ul>   
+  <ul class="nav navbar-nav navbar-right">
+    <li style="font-size: 16px "><%= link_to "Contact", addresses_contact_path %></li>  
+    <li style="font-size: 16px"><a href="/cart_line_items"><span class="glyphicon glyphicon-shopping-cart"></span>Cart</a></li>
+    <li style="font-size: 16px"><%= link_to "Orders", orders_path %></li>
+  <!-- </ul> -->
+  <% if user_signed_in? %>
+  <!-- <ul class="nav navbar-nav">  -->
+    <li class="dropdown" style="font-size: 16px" ><a class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><%= link_to "Profile", edit_user_registration_path %></li>
+        <li><%= link_to "Add Address", addresses_path%></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+      </ul>
+    </li>
+  <!-- </ul> -->
+  <% else %>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/users/sign_in">Sign In<span class="glyphicon glyphicon-user"></span></a></li>
+      <li><a href="/users/sign_up">Sign Up<span class="glyphicon glyphicon-log-in"></span></a></li>
+    </ul>
+  <% end %>
+  </ul>
+  </div>
 </nav>
-
-<marquee direction = "right" width="50%" style="color:red">Every Day Shopping</marquee ><marquee style="color:green" direction = "left"  width="50%">Get Your Product</marquee >
-
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
- 
+<nav class="navbar">
+  <form class="navbar-form"> 
+    <center>
+      <div class="input-group">
+        <input type="text" class="form-control" size="100" id="search" placeholder="Live Search for Product and Brands">
+          <div class="input-group-btn">
+            <button style="background-color: #ffa100" class="btn btn-default" type="submit">
+                <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
+      </div>
+    </center>
+  </form>
+</nav>
+<nav class="navbar" style="background-color: #ffa100">
+  <ul class="nav navbar-nav ">
+  <li><%= link_to "Home", products_path %></li>
+  <% Category.all.each do |category| %>
+    <li class="dropdown" style="font-size: 16px"><a class="dropdown-toggle" data-toggle="dropdown"><%= category.name%>
+      <span class="caret"></span>
+      <ul class = "dropdown-menu">
+        <% category.sub_categories.each do |category| %>
+          <li style="font-size: 12px"> <%= link_to category.name, sub_category_path(category.id) %></li>
+        <%end%>
+      </ul>
+    </li>
+  <% end %>
+  </ul>
+</nav>
+<% if notice %>
+  <div class = "alert alert-success">
+    <%= notice %>
+  </div>
+<% end %>
+<% if alert %>
+  <div class = "alert alert-warning">
+    <%= alert %>
+  </div>
+<% end %>
 <%= yield %>
-
-
-
 </body>
 </html>
