Revert "ecommerce changes"
This reverts commit ad149c1f5d093ef7b64e3b32427f1cc9df3453e3.

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,12 +1,2 @@
 <h2> Add Category </h2>
-<%#= render 'form' %>
-
-
-<%= form_for @category do |f| %>
-
-	<label>Name</label><br/>
-	<%= f.text_field :name %><br/> 
-
-	<%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
