--- a/app/views/cart_line_items/index.html.erb
+++ b/app/views/cart_line_items/index.html.erb
@@ -1,6 +1,228 @@
-<h2>Your Cart (<%= @cart_line_items.pluck(:quantity).inject(:+) %> items)</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<div class="container">
+	<div class="row">
+		<div class="col-sm-8">
+			<div class="myCart">
+				<span class="cartItems">My Cart (<%= @total_quantity %>)</span>
+				<%delivery_fee = 0%>
+				<select value="" class="form-control" id="address_list">
+					<% @addresses.each do |address|%>
+						<option>Select Delivery Address</option>
+						<option value="<%= address.id%>"><%= address.pincode%></option>
+					<%end%>
+				</select>
+				<hr/>
+				<table>
+					<tbody>
+						<% total_price = 0%>
+						<% total_quantity = 0%>
+						<%@cart_line_items.each do |id, value| %>
+						<%quantity = value.map(&:quantity).inject(:+)%>
+						<%product = Product.find_by id: id%>
+						<%price = product.price * quantity%>
+						<%total_price += price%>
+						<%total_quantity += quantity%>
+						<tr>
+							<div class="row">
+								<div class="col-sm-2"><img class="image" src="<%= product.image_url %>" width="180px" height="150px"/></div>
+								<div class="col-sm-6 name"><%= product.name %><br/><br/>
+								<span class="seller">Seller: Retailer</span>	<br/>
+								<span class="price"> ₹<%= price%></span>   <s class="normal_price"> ₹<%= price * 10/ 100 %></s> <span class="off">10% Off   <span class="offers">4 Offers available</span></span><br/></div>
+								<div class="col-sm-4 delivery_day">Delivery In <%day = Random.rand(1..10)%> <%= day %> days, <%= (Date.today + day.days).strftime('%A').slice(0,3)%> | <span class="free"><% delivery_amount = Random.rand(100..200)%><%if day < 3 %>free <s>₹<%=delivery_amount %></s><%else%>fee ₹<%= delivery_amount %><%delivery_fee += delivery_amount%><%end%><span></div>
+							</div>
+							<div class="row actions">
+								<div class="col-sm-3">
+									<button class="plus">+</button>
+									<button class="quantity"><%= quantity%></button> 
+									<button class="minus">-</button>
+								</div>
+								<div class="col-sm-4 ">
+									<a href="#" class="save_for_later">SAVE FOR LATER</a>
+								</div>
+								<div class="col-sm-3 ">
+									<a href="#" class="remove">REMOVE</a>
+								</div>
+							</div>
+						</tr>
+						<hr/>
+						<% end %>
+					</tbody>
+				</table>
+			</div>			
+		</div>
+		<div class="col-sm-4">
+			<div class="myBill">
+			<span class="price_details">
+				PRICE DETAILS
+			</span>
+			<hr/>
 
-<%= sum = 0 %>
+			<div class="price_receipt">
+				Price (<%= total_quantity%> <%= total_quantity > 1 ? "items" : "item"%>)  <span class="total_price">₹<%= total_price%>
+			</span>
+			</div>
+
+			<div class="price_receipt">
+				Delivery fee <span class="delivery_fee"><%if delivery_fee == 0 %>Free<%else%>₹<%= delivery_fee%><%end%></span>
+			</div>
+			<hr/>
+			<div class="total_payable">
+				Total Payble 	<span class="total_amount">₹<%= total_price + delivery_fee%></span>	
+			</div>
+			<div class="place_order">
+				<%= form_for @order do |f| %>
+						<%= f.hidden_field :address_id, :value =>:address_id, class: "address_id" %> addresss
+	 				<%= f.submit "PLACE ORDER", class: "btn btn-lg place_order" %>
+				<% end %>
+			</div>
+		</div>
+	</div>
+	</div>
+</body>
+</html>
+<script type="text/javascript">
+	const address_list = document.getElementById('address_list')
+	const address_id = document.getElementById('address_id')
+	address_list.addEventListener('change', function(){
+		address_id.value = address_list.value	
+	})
+	
+</script>
+<style type="text/css">
+	body {
+		background-color: #F7F9F9; 
+	}
+
+/*My Bill Block starts here*/
+	.myBill {
+		height: 225px;
+		margin-top: 35px;
+		padding-top: 20px;
+		background-color: white;
+	}
+	.btn {
+		background-color: #FF5733;
+	}
+	.place_order {
+		margin-left: 20px;
+		margin-top: 20px;
+		color: white;
+		border-radius: 0px;
+	}
+ 	.total_payable {
+ 		padding-left: 30px;
+ 		font-weight: bold;
+ 	}
+ 	.price_details {
+		font-weight: normal;
+		font-size: 16px;
+		color: gray;
+		font-weight: bold;
+		padding-left: 30px;
+	}
+
+	.price_receipt {
+		padding-left:40px;	
+		padding-top: 10px;
+	}
+
+	.delivery_fee {
+		padding-left: 130px;
+	}
+
+  .total_amount {
+  	padding-left: 130px;
+  }
+	.total_price {
+		padding-left: 120px;
+	}
+/*My Bill Block ends here*/
+
+/*My Cart Block starts here*/
+	#address_list {
+		width: 250px;
+		margin-left: 460px;
+	}
+	.price {
+		padding-right: 4px;
+	}
+	.plus, .minus {
+  /*border: 2px solid;*/
+  border-radius: 25px;
+	}
+	.quantity {
+		/*border: 2px solid;*/
+    /*border-radius: 25px;*/
+		width: 50px;
+	}
+	.save_for_later, .remove {
+		font-weight: bold;
+		color: #17202A;
+	}
+	.save_for_later:hover, .remove:hover {
+		color:blue;
+		text-decoration: none;
+	}
+	.actions {
+		margin-left: 20px;
+	}
+	.free {
+		color: green;
+	}
+	.seller {
+		font-size: 12px;
+		color: gray;
+	}
+	.name {
+		/*padding: 50px;*/
+	}
+	.image, .name {
+		padding: 40px;
+		padding-top: 10px;
+	}
+	.offers {
+		font-size: 12px;
+		padding-left: 10px;
+	}
+	.normal_price, .off {
+		padding-left: 10px;
+		color: gray;
+	}
+	.off {
+		color: green;
+	}
+	.delivery_day {
+		padding-top: 10px;
+		padding-left: 0px;
+		font-size: 15px;
+	}
+	.cartItems {
+		padding-left: 15px;
+		font-weight: bold;
+		font-size: 20px;
+	}
+	
+	.myCart {
+		/*height: 400px; */
+		margin-top: 35px;
+		background-color: white;
+		box-sizing: border-box;
+		padding-top: 15px;
+		font-size: 16px;
+	}
+	
+
+/*/*My Cart Block ends here*/*/
+</style>
+
+<!-- <h2>Your Cart (<%##= @cart_line_items.pluck(:quantity).inject(:+) %> items)</h2> 
+
+<%#= sum = 0 %>
 <table border="1">
 	<thead>
 		<tr>
@@ -13,28 +235,29 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% @cart_line_items.each_with_index do |cart_line_item, index| %>
+		<%# @cart_line_items.each_with_index do |cart_line_item, index| %>
 		<tr>
-			<td><%= index + 1 %></td>
-			<td><%= cart_line_item.product.name %></td>
-			<td><%= cart_line_item.product.price %></td>
-			<td><%= cart_line_item.quantity %></td>
-			<td><%= cart_line_item.product.price * cart_line_item.quantity %></td>
+			<td><%#= index + 1 %></td>
+			<td><%#= cart_line_item.product.name %></td>
+			<td><%#= cart_line_item.product.price %></td>
+			<td><%#= cart_line_item.quantity %></td>
+			<td><%#= cart_line_item.product.price * cart_line_item.quantity %></td>
 
-			<% sum += cart_line_item.product.price * cart_line_item.quantity %>
+			<%# sum += cart_line_item.product.price * cart_line_item.quantity %>
 
-			<td><%= link_to "remove", cart_line_item_path(cart_line_item.id), method: :delete, data: { confirm: "Are you sure to remove the product from the cart?"} %></td>
+			<td><%#= link_to "remove", cart_line_item_path(cart_line_item.id), method: :delete, data: { confirm: "Are you sure to remove the product from the cart?"} %></td>
 		</tr>
-		<% end %>
+		<%# end %>
 	</tbody>
 </table>
 
-<h3> Total : <%= sum %></h3>
+<h3> Total : <%#= sum %></h3>
 
-<%= form_for @order do |f| %>
-	<% @addresses.each do |address| %>
-		<%= f.radio_button :address_id, address.id %> addresss-<%= address.id %>
-	<% end %>
- <%= f.submit "Checkout" %>
-<% end %>
-<%= link_to "continue shopping", products_path %>
+<%#= form_for @order do |f| %>
+	<%# @addresses.each do |address| %>
+		<%#= f.radio_button :address_id, address.id %> addresss-<%#= address.id %>
+	<%# end %>
+ <%#= f.submit "Checkout" %>
+<%# end %>
+<%#= link_to "continue shopping", products_path %>
+-->
