--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ecommerce</title>
+  <title>Shopping Cart | Flipkart.com</title>
+  <%= favicon_link_tag 'logo.png' %>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -329,6 +331,6 @@
     display: block;
   }
   .navbar {
-    height: 40px;
+    height: 55px;
   }
 </style>
